--- a/entries/projects/achievements.html
+++ b/entries/projects/achievements.html
@@ -11,12 +11,12 @@
 <body>
 <div class="header"></div>
     <div class="achievementsmainpoem">
-        <div class="interviewer">I thought we might begin with you telling us a bit about your process.</div>
+        <div class="interviewer">I thought you might begin by telling us a bit about your process.</div>
         <div class="responder">Process.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer">People really would like to know. I understand it's a big question, one that you've probably been asked plenty of times before.</div>
-        <div class="responder">This is my first interview. I'm not sure I'm following.</div>
+        <div class="interviewer">People really would like to know. I understand it's a big question, one that you've probably been asked plenty of times.</div>
+        <div class="responder">This is my first interview. I'm not sure I follow.</div>
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">Not one to follow?</div>
@@ -71,7 +71,7 @@
         <div class="responder">I've always wondered if any of it was worth pursuing, if anything was likely to come next.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer">But can you really, with any confidence, say that you've managed to avoid cliché?</div>
+        <div class="interviewer">But can you really, with any confidence, say that you've avoided cliché?</div>
         <div class="responder">Of course there are pitfalls, of course. But overall... no...</div>
     </div>
     <div class="achievementsmainpoem">
@@ -80,11 +80,11 @@
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">So does it matter, then, what other people think?</div>
-        <div class="responder">Not sure I follow.</div>
+        <div class="responder">I'm not following.</div>
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">Did you ever have dreams of the stage? Did you ever dream about waking up onstage?</div>
-        <div class="responder">I said those tapes really could have been something, and didn't believe it. Shame they surfaced so late.</div>
+        <div class="responder">I pretended those tapes really meant something, but didn't believe it. Shame they surfaced so late.</div>
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">They say it's easier than ever to release sound.</div>
@@ -154,7 +154,7 @@
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">And you find it easy enough to carry on?</div>
-        <div class="responder">Everything I've made has been sheer sheer pain. Nothing ever went up easy. Every projects means sharpening teeth and stretching limbs, not in a way that's comfortable.</div>
+        <div class="responder">Everything I've made has been sheer pain. Nothing ever went up easy. Every project means sharpening teeth and stretching limbs, not in a way that's comfortable.</div>
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">The effort?</div>
@@ -238,7 +238,7 @@
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">And what do they think of you today?</div>
-        <div class="responder">I try to call home four times a year, let them know I'm still going. We never have that much to talk about. I end up talking about myself.</div>
+        <div class="responder">I try to call home four times a year, once a season, let them know I'm still going. We never have that much to talk about. I end up talking about myself.</div>
     </div>
     <div class="achievementsmainpoem">
         <div class="interviewer">They must be very proud.</div>
@@ -261,57 +261,77 @@
         <div class="responder">The way the noise of everything becomes too much, too fast. Yes, I can understand that.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">And what about endings? You've hardly mentioned endings at all.</div>
+        <div class="responder">You see, that all came about as a result of something to do with my skin. I get these small bumps, kind of, like spots, but not spots, perhaps blocked pores, swollen hair follicles, who knows, you don't really notice them unless you look close, they don't itch or hurt or anything, but I can't leave them alone, drives anyone who knows me mad, they tell me off for picking at them whenever I get a chance, pinching the skin until it bruises, but I keep thinking about what's beneath the bumps, there must be something there otherwise the skin would be flat, but even if there is something there, underneath the surface, it's not worth picking at, not worth leaving a mark for, it's still just cosmetic.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">You don't think the music's aged that well?</div>
+        <div class="responder">Difficult to say. We live in different times. I suppose this is probably where I should say something about technology, how it's changed everything.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">How many listeners, do you think?</div>
+        <div class="responder">Do you have the numbers to hand?</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">I want you to guess.</div>
+        <div class="responder">Please, tell me.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">Make it up.</div>
+        <div class="responder">I let a few friends listen at the time. Everything that made noise was exciting back then. I don't think anyone was that impressed.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">I've lost the numbers. Shame, because I think you would have been pleasantly surprised.</div>
+        <div class="responder">I imagine so.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">And what's next? What can we expect?</div>
+        <div class="responder">I'm going to lie down for a while. Been struggling with my balance quite a bit recently. Metaphorically speaking, you understand. I can still walk around without falling over.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">I'm very sorry to hear that.</div>
+        <div class="responder">I don't think I really know how to answer your question.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">In what sense?</div>
+        <div class="responder">In the sense of 'Was it all worth it?'</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">That's not a question anyone has asked.</div>
+        <div class="responder">I saw a funeral being conducted remotely the other day, via video-link. There were fractals of grief. The connection was weak. It was more moving because of all that, I think. Not being able to hear or see everyone properly.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">Who do you think will be there in the end?</div>
+        <div class="responder">I never thought I'd make it as far as I have. I won't be leaving much behind. Buildings, unless they're cathedrals, don't tend to last more than a few generations. Songs die even younger.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">You never answered my question.</div>
+        <div class="responder">Thing that struck me was how no one mentioned what the deceased did for a living. It wasn't mentioned once. People just talked about other things.</div>
     </div>
     <div class="achievementsmainpoem">
-        <div class="interviewer"></div>
-        <div class="responder"></div>
+        <div class="interviewer">That's all we've got time for, I'm afraid.</div>
+        <div class="responder">Where did you say you found them? How did they resurface?</div>
     </div>
-
+    <div class="achievementsmainpoem">
+        <div class="interviewer">They really have caused quite a stir.</div>
+        <div class="responder">I don't know how I feel about all of that.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">People have talked about feeling lifted.</div>
+        <div class="responder">I feel lifted.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">The path you didn't take?</div>
+        <div class="responder">The one that -</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">I'm afraid that's all we've got time for.</div>
+        <div class="responder">Feels strange having something break the surface.</div>
+    </div>
+    <div class="achievementsmainpoem">
+        <div class="interviewer">We're going to have to <a href="../../index.html">leave</a> it there.</div>
+        <div class="responder">I'm sorry. Thank you for your time.</div>
+    </div>
+    <div class="header"></div>
 </body>
 </html>
