Add unfamiliar park, add medici image

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
+            <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
         </p>
     </div>
 
@@ -118,6 +119,8 @@
         <div class="imgcontainerhigher"><img src="./resources/images/petshop.jpg" alt="scalefursale" id="petshoppic"><p>scalefursale</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/cathide.jpg" alt="burrow" id="cathidepic"><p>burrow</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>medici</p></div>
     </div>
 
 </body>
