edit cumulo caption

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/woodwalk.jpg" alt="woodland bath path" id="woodwalkpic"><p>woodland bath path</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/stormcloud.jpg" alt="cumulonimbus wired to fuck" id="stormcloudpic"><p>cumulonimbus wired to fuck</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/stormcloud.jpg" alt="cumulonimbus wired to fuck" id="stormcloudpic"><p>cumulonimbus wired to blitz</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/birthday.jpg" alt="candlecake for the elderstep" id="birthdaypic"><p>candlecake for the elderstep</p></div>
 
