Edit dog caption

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixel gull field, scrubbed through two screens" id="heronpic"><p>lone heron in a pixel gull field, scrubbed through two screens</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dog on dappled cotton</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dappled mutt</p></div>
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>beneath this silver birch and vapour trail people were covered in mud, burning up, trying to complete a marathon</p></div>
 
