Edit video reps

--- a/entries/videoreps250522.html
+++ b/entries/videoreps250522.html
@@ -23,8 +23,7 @@
 
     <div class="mainentry">
         <p>
-            People create videos which are just shorter videos on repeat. They're impossible to watch 
-            and yet there's no doubt they mean something.
+            People create videos which are just shorter videos on repeat. They're impossible to watch, but no doubt they mean something.
         </p>
         <p>
             There are other things in the world which can't be watched, but mean something. Films reeling 
