add three images

--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
         <div class="imgcontainerportrait"><img src="./resources/images/cathide.jpg" alt="burrow" id="cathidepic"><p>burrow</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>medici</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="ancestors" id="ancestorspic"><p>ancestors</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>godloom</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/henry.jpg" alt="the watcher on the wall" id="henrypic"><p>the watcher on the wall</p></div>
     </div>
 
 </body>
