change two captions

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/field.jpg" alt="mooncrop" id="fieldpic"><p>mooncrop</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty bottles" id="pondpic"><p>when we first moved here, the pond was filled with earth and empty bottles</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty bottles" id="pondpic"><p>when we first moved here, the ponds were filled with earth and empty bottles</p></div>
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/closeupplants.jpg" alt="red tendrils that would suit an underwater scene" id="closeupplantspic"><p>red tendrils that could sprout from a coral reef, nowhere near water</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening to Soccer Mommy <br>in the shadow of stadiums</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening to Soccer Mommy <br>in the shadows of stadiums</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/moon.jpg" alt="mooncrop" id="moonpic"><p>mooncrop</p></div>
 
@@ -119,7 +119,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>medici</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="ancestors" id="ancestorspic"><p>ancestors</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, greyed and gazing from the pane</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>godloom</p></div>
 
