small Bodzin correction

--- a/entries/bodzin270822.html
+++ b/entries/bodzin270822.html
@@ -26,7 +26,7 @@
 
         <p>Once you've found your synthetic groove, giving it space to wander and bound must hold some exhilaration, like coming across a weak but friendly god in the woodworking shed.</p>
 
-        <p>There are videos of Bodzin performing in alpine resorts, draped in mountain mist, exhalations of Bacardi, cool and very cold, his lead line baying without the need for a pack, just an audience, ampage, and all if it seen through a drone-lifted lens.</p>
+        <p>There are videos of Bodzin performing in alpine resorts, draped in mountain mist, exhalations of Bacardi, cool and very cold, his lead line baying without the need for a pack, just an audience, ampage, and all of it seen through a drone-lifted lens.</p>
     </div>
 
     <div class="dateentry">
