--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p>
             <a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/bodzin270822.html">bodzin270822</a>
+            <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
@@ -124,6 +125,8 @@
         <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>godloom</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/henry.jpg" alt="the watcher on the wall" id="henrypic"><p>the watcher on the wall</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/boatyard.jpg" alt="boatgut" id="boatyardpic"><p>boatgut</p></div>
     </div>
 
 </body>
