Add drapes and all associated images

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
+            <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
             <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
         </p>
     </div>
@@ -120,7 +121,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>medici</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, greyed and gazing from the pane</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>godloom</p></div>
 
