--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </div> 
         <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer, cartographer</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing characters</span></p>
         <p><span id="achievementstitle"><a href="./entries/projects/achievements.html">achievements</a></span><span id="achievementsinfo"> - an interview about wanting to be interviewed</span></p>
+        <p><span id="ectobruisetitle"><a href="./entries/projects/ectobruise.html">the ectobruise</a></span><span id="ectobruiseinfo"> - a first foray into interactive fiction, built using the Twine authoring tool</span></p>
     
     <div class="navigationtitle">
         optic verve
