Add plenty of images

--- a/entries/opticverve/pacificdrapes121022.html
+++ b/entries/opticverve/pacificdrapes121022.html
@@ -52,7 +52,7 @@
 
     <div class="mainentryimagebreak">
         <p>
-            This is a corner of our earth governed by inlets and coves.
+            This is a corner of our globe governed by inlets and coves.
         </p>
     </div>
 
