--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@
         <div class="imgcontainerportrait"><img src="./resources/images/henry.jpg" alt="the watcher on the wall" id="henrypic"><p>the watcher on the wall</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/boatyard.jpg" alt="boatgut" id="boatyardpic"><p>boatgut</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/barkinpark.jpg" alt="bark for park's sake" id="barkinparkpic"><p>bark for park's sake</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer and coves</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>untroubled water trunk</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/barkonbark.jpg" alt="bark climbing over bark" id="barkonbarkpic"><p>bark for bark's sake</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/ferns.jpg" alt="kiwi ferns of different shades" id="fernspic"><p>paleozoic patch</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangropolis</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>banyan root droop</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/web.jpg" alt="cocoon web" id="webpic"><p>webmarsh</p></div>
     </div>
 
 </body>
