--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/barkinpark.jpg" alt="bark for park's sake" id="barkinparkpic"><p>bark for park's sake</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer and coves</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer and cove after cove</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>untroubled water trunk</p></div>
 
@@ -143,7 +143,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangropolis</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>banyan root droop</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>rootlord and drooper</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/web.jpg" alt="cocoon web" id="webpic"><p>webmarsh</p></div>
     </div>
