Make medici smaller

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/cathide.jpg" alt="burrow" id="cathidepic"><p>burrow</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>medici</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>medici</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
 
