Update a number of image captions

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="images">
-        <div class="imgcontainerhigher"><img src="./resources/images/mountainlake.jpg" alt="mountains I haven't visited" id="mountainlakepic"><p>mountains I haven't visited</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/mountainlake.jpg" alt="mountains I haven't visited" id="mountainlakepic"><p>mountains I've never visited</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixel gull field, scrubbed through two screens" id="heronpic"><p>lone heron in a pixel gull field, scrubbed through two screens</p></div>
 
@@ -83,7 +83,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>bomba watching water on the ink curtain beach</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>bomba and beach water by the ink curtain</p></div>
 
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
 
@@ -125,7 +125,7 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>godloom</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>clockloom</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/henry.jpg" alt="the watcher on the wall" id="henrypic"><p>the watcher on the wall</p></div>
 
@@ -133,19 +133,19 @@
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/barkinpark.jpg" alt="bark for park's sake" id="barkinparkpic"><p>bark for park's sake</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer and cove after cove</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer and cove upon cove</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>untroubled water trunk</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>trunk over untroubled water</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/barkonbark.jpg" alt="bark climbing over bark" id="barkonbarkpic"><p>bark for bark's sake</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/ferns.jpg" alt="kiwi ferns of different shades" id="fernspic"><p>paleozoic patch</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/ferns.jpg" alt="kiwi ferns of different shades" id="fernspic"><p>paleozoia</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangropolis</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangrove burbs</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>rootlord and drooper</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/web.jpg" alt="cocoon web" id="webpic"><p>webmarsh</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/web.jpg" alt="cocoon web" id="webpic"><p>web bowl</p></div>
     </div>
 
 </body>
