Add nightbugs and kiwi pic

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
@@ -121,7 +122,7 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/cathide.jpg" alt="burrow" id="cathidepic"><p>burrow</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>medici</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>yellow medici</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
 
@@ -135,7 +136,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/aucklandbridge.jpg" alt="Auckland, city of bays and coves" id="aucklandbridgepic"><p>bridge, shimmer and cove upon cove</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>trunk over untroubled water</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/barkonbay.jpg" alt="looming trunk over water" id="barkonbaypic"><p>trunk and untroubled water</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/barkonbark.jpg" alt="bark climbing over bark" id="barkonbarkpic"><p>bark for bark's sake</p></div>
 
@@ -146,6 +147,8 @@
         <div class="imgcontainerportrait"><img src="./resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>rootlord and drooper</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/web.jpg" alt="cocoon web" id="webpic"><p>web bowl</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/kiwi.jpg" alt="kiwi bird drifting beneath the wing mirror" id="kiwipic"><p>the watcher in the wingroad</p></div>
     </div>
 
 </body>
