--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
