--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
+            <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
