--- a/entries/projects/magicandmachine/agamehelps.html
+++ b/entries/projects/magicandmachine/agamehelps.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../resources/css/magicandmachine.css">
+    <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++</title>
+    <title>o++3
+    </title>
 </head>
+
 <body>
-    <div class="mainlinksection">
-        <p><a href="./magicandmachine/computergeneration.html">+</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/colossalcave.html">+</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/agamehelps.html">o</a></p>
+    <div class="maintextsection">
+        <p>
+            'A game helps the people who play build an internal world that best serves them...'
+            <br>
+            <br>
+            &nbsp&nbsp&nbsp&nbsp&nbsp- forgot who said this
+        </p>
     </div>
     <div class="leave">
         <p>
-            <a href="../../index.html">x</a>
+            <a href="../magicandmachineindex.html">x</a>
         </p>
     </div>
 </body>
+
 </html>
