--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <p>
             <a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
             <br><a href="./entries/opticverve/coves161022.html">coves161022</a>
+            <br><a href="./entries/opticverve/femur291122.html">femur291122</a>
             <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
