Edit +00 hover text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer, cartographer</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing characters</span></p>
         <p><span id="achievementstitle"><a href="./entries/projects/achievements.html">achievements</a></span><span id="achievementsinfo"> - an interview about wanting to be interviewed</span></p>
         <p><span id="ectobruisetitle"><a href="./entries/projects/ectobruise.html">the ectobruise</a></span><span id="ectobruiseinfo"> - a first foray into interactive fiction, built using the Twine authoring tool</span></p>
-        <p><span id="magicandmachinetitle"><a href="./entries/projects/magicandmachineindex.html">o + +</a></span><span id="magicandmachineinfo"> - games, roleplay, imagination, and the working of digital worlds / the project that gave rise to the website</span></p>
+        <p><span id="magicandmachinetitle"><a href="./entries/projects/magicandmachineindex.html">o + +</a></span><span id="magicandmachineinfo"> - systems of play, imagination, and the working of digital worlds / the project that gave rise to the website</span></p>
     
     <div class="navigationtitle">
         optic verve
