--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -10,7 +10,16 @@
 </head>
 <body>
     <div class="mainlinksection">
-        <p><a href="./magicandmachine/1computergeneration.html">+</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/2colossalcave.html">+</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/3agamehelps.html">o</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/4aglitteringdata.html">+</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/5dungeonkeeper.html">o</a></p>
+        <p>
+            <a href="./magicandmachine/1computergeneration.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/2colossalcave.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/3agamehelps.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/4aglitteringdata.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/5dungeonkeeper.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/6morehumanscene.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/7kidsthesedays.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/8ahamoments.html">+</a>
+        </p>
     </div>
     <div class="leave">
         <p>
