Add a load of new magicandmachine entries

--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -28,6 +28,18 @@
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/15youneverlistened.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/16wewouldneverhavegonetowar.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/17whenfinallyprogrammed.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/18sometimeswecantrejoin.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/19carapaceofrazor.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/20destroyerofworlds.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/21dementia.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/22somethingvast.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/23borntoolate.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/24turnovertheboard.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/25whenthefictionalworld.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/26muchlikegod.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/27cortext.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/28destroyeroftheunderworld.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/29diagramofabug.html">+</a>
         </p>
     </div>
     <div class="leave">
