Add two to magicandmachine

--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -40,6 +40,8 @@
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/27cortext.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/28destroyeroftheunderworld.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/29diagramofabug.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/30whatwillbeleft.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/31loveasaform.html">+</a>
         </p>
     </div>
     <div class="leave">
