Edit destroyer of worlds

--- a/entries/projects/magicandmachine/20destroyerofworlds.html
+++ b/entries/projects/magicandmachine/20destroyerofworlds.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>'destroyer of worlds' - think about just how much that might include / how terrifying that could truly be</p>
+        <p>'destroyer of worlds' - think about just how much that could include / how terrifying that could truly be</p>
     </div>
     <div class="leave">
         <p>
