add to drafts and edit entry

--- a/entries/projects/magicandmachine/22somethingvast.html
+++ b/entries/projects/magicandmachine/22somethingvast.html
@@ -12,11 +12,11 @@
 
 <body>
     <div class="maintextsection">
-        <p>something vast blocking most of the sky 
+        <p>something vast blocking out most of the sky 
             <br><br>
-            with ninety six long, leathery legs
+            with ninety-six long, leathery legs
             <br><br>
-            at the end of each one a tooth-foot 
+            at the end of each one a toothfoot 
             <br><br>
             and a tale that reeks</p>
     </div>
