Add beached and a few images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     </div>
     <div class="links">
         <p>
-            <a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
+            <a href="./entries/opticverve/beached161222.html">beached161222</a>
+            <br><a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
             <br><a href="./entries/opticverve/coves161022.html">coves161022</a>
             <br><a href="./entries/opticverve/femur291122.html">femur291122</a>
             <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
@@ -153,6 +154,10 @@
         <div class="imgcontainerportrait"><img src="./resources/images/web.jpg" alt="cocoon web" id="webpic"><p>web bowl</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/kiwi.jpg" alt="kiwi bird drifting beneath the wing mirror" id="kiwipic"><p>the watcher in the wingroad</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/tui.jpg" alt="tui perched on branch beneath huge tree" id="tuipic"><p>tui bluff</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/purplepalms.jpg" alt="purple palms by waikaremoana" id="palmpic"><p>palm sunday</p></div>
     </div>
 
 </body>
