--- a/entries/wetradiovoice230522.html
+++ b/entries/wetradiovoice230522.html
@@ -31,7 +31,7 @@
         
         <p>
             He tells her about a camping trip he's been on - the Canadian shield, some plateau of ancient rock. She repeats 
-            the word 'rock' several times, an echo that makes me think maybe this is pre-recorded after all, maybe all 
+            the word 'rock' several times, an echo that makes me think perhaps this is pre-recorded after all, maybe all 
             this happened before, but then she starts coughing, gently because of the audio filter, even the cough is 
             comforting, it doesn't seem possible to cough harshly under that damp sounding light, and he asks her, in 
             a rabbit's kiss of a voice, if she's ok.  
